fixed footer being visible before mixitup content loaded. Added open graph image of logo for social preview

--- a/assets/css/_animations.scss
+++ b/assets/css/_animations.scss
@@ -12,3 +12,16 @@
 .slideFromTop {
   @include animation-name(slideFromTop);
 }
+
+@include keyframes(fade) {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade {
+  @include animation-name(fade);
+}
